@@ -1,3 +1,8 @@
+=== (In Git)
+
+* Bugfixes:
+  * Quote service name. Closes GH-3
+
 === 0.4.beta3 / 2010-03-07
 
 * Bugfixes:
